--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a>
                     <div class="logo"></div>
                 </a>
-                <a target="_blank">home</a>
+                <a target="_blank">Home</a>
                 <a>Blog</a>
                 <a>Features</a>
                 <a>Pricing</a>
@@ -38,11 +38,192 @@
     </header>
     <main>
         <section>
-            <div сlass="section-preview">
+            <div class="section-preview">
+                <div class="clouds">
+                    <div class="cloud cloud1">
+                        <svg width="168" height="129" viewBox="0 0 168 129" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g filter="url(#filter0_d_3_61)">
+                            <path d="M83.9068 40C62.4192 40 45 57.4609 45 79H122.814C122.814 57.4609 105.394 40 83.9068 40Z" fill="white"/>
+                            </g>
+                            <defs>
+                            <filter id="filter0_d_3_61" x="0" y="0" width="167.814" height="129" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                            <feOffset dy="5"/>
+                            <feGaussianBlur stdDeviation="22.5"/>
+                            <feColorMatrix type="matrix" values="0 0 0 0 0.593724 0 0 0 0 0.684469 0 0 0 0 0.888646 0 0 0 0.1 0"/>
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_3_61"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_3_61" result="shape"/>
+                            </filter>
+                            </defs>
+                        </svg>                                  
+                    </div>
+                    <div class="cloud cloud2">
+                        <svg width="168" height="129" viewBox="0 0 168 129" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g filter="url(#filter0_d_3_61)">
+                            <path d="M83.9068 40C62.4192 40 45 57.4609 45 79H122.814C122.814 57.4609 105.394 40 83.9068 40Z" fill="white"/>
+                            </g>
+                            <defs>
+                            <filter id="filter0_d_3_61" x="0" y="0" width="167.814" height="129" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                            <feOffset dy="5"/>
+                            <feGaussianBlur stdDeviation="22.5"/>
+                            <feColorMatrix type="matrix" values="0 0 0 0 0.593724 0 0 0 0 0.684469 0 0 0 0 0.888646 0 0 0 0.1 0"/>
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_3_61"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_3_61" result="shape"/>
+                            </filter>
+                            </defs>
+                        </svg>                              
+                    </div>
+                    <div class="cloud cloud3">
+                        <svg width="168" height="129" viewBox="0 0 168 129" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g filter="url(#filter0_d_3_61)">
+                            <path d="M83.9068 40C62.4192 40 45 57.4609 45 79H122.814C122.814 57.4609 105.394 40 83.9068 40Z" fill="white"/>
+                            </g>
+                            <defs>
+                            <filter id="filter0_d_3_61" x="0" y="0" width="167.814" height="129" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                            <feOffset dy="5"/>
+                            <feGaussianBlur stdDeviation="22.5"/>
+                            <feColorMatrix type="matrix" values="0 0 0 0 0.593724 0 0 0 0 0.684469 0 0 0 0 0.888646 0 0 0 0.1 0"/>
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_3_61"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_3_61" result="shape"/>
+                            </filter>
+                            </defs>
+                        </svg>                                
+                    </div>
+                    <div class="cloud cloud4">
+                        <svg width="168" height="129" viewBox="0 0 168 129" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g filter="url(#filter0_d_3_61)">
+                            <path d="M83.9068 40C62.4192 40 45 57.4609 45 79H122.814C122.814 57.4609 105.394 40 83.9068 40Z" fill="white"/>
+                            </g>
+                            <defs>
+                            <filter id="filter0_d_3_61" x="0" y="0" width="167.814" height="129" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                            <feOffset dy="5"/>
+                            <feGaussianBlur stdDeviation="22.5"/>
+                            <feColorMatrix type="matrix" values="0 0 0 0 0.593724 0 0 0 0 0.684469 0 0 0 0 0.888646 0 0 0 0.1 0"/>
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_3_61"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_3_61" result="shape"/>
+                            </filter>
+                            </defs>
+                        </svg>                              
+                    </div>
+                    <div class="cloud cloud5">
+                        <svg width="168" height="129" viewBox="0 0 168 129" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g filter="url(#filter0_d_3_61)">
+                            <path d="M83.9068 40C62.4192 40 45 57.4609 45 79H122.814C122.814 57.4609 105.394 40 83.9068 40Z" fill="white"/>
+                            </g>
+                            <defs>
+                            <filter id="filter0_d_3_61" x="0" y="0" width="167.814" height="129" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                            <feOffset dy="5"/>
+                            <feGaussianBlur stdDeviation="22.5"/>
+                            <feColorMatrix type="matrix" values="0 0 0 0 0.593724 0 0 0 0 0.684469 0 0 0 0 0.888646 0 0 0 0.1 0"/>
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_3_61"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_3_61" result="shape"/>
+                            </filter>
+                            </defs>
+                        </svg>                                                  
+                    </div>
+                    <div class="cloud cloud6">
+                        <svg width="168" height="129" viewBox="0 0 168 129" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g filter="url(#filter0_d_3_61)">
+                            <path d="M83.9068 40C62.4192 40 45 57.4609 45 79H122.814C122.814 57.4609 105.394 40 83.9068 40Z" fill="white"/>
+                            </g>
+                            <defs>
+                            <filter id="filter0_d_3_61" x="0" y="0" width="167.814" height="129" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                            <feOffset dy="5"/>
+                            <feGaussianBlur stdDeviation="22.5"/>
+                            <feColorMatrix type="matrix" values="0 0 0 0 0.593724 0 0 0 0 0.684469 0 0 0 0 0.888646 0 0 0 0.1 0"/>
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_3_61"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_3_61" result="shape"/>
+                            </filter>
+                            </defs>
+                        </svg>                                                      
+                    </div>
+                    <div class="cloud cloud7">
+                        <svg width="168" height="129" viewBox="0 0 168 129" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g filter="url(#filter0_d_3_61)">
+                            <path d="M83.9068 40C62.4192 40 45 57.4609 45 79H122.814C122.814 57.4609 105.394 40 83.9068 40Z" fill="white"/>
+                            </g>
+                            <defs>
+                            <filter id="filter0_d_3_61" x="0" y="0" width="167.814" height="129" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                            <feOffset dy="5"/>
+                            <feGaussianBlur stdDeviation="22.5"/>
+                            <feColorMatrix type="matrix" values="0 0 0 0 0.593724 0 0 0 0 0.684469 0 0 0 0 0.888646 0 0 0 0.1 0"/>
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_3_61"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_3_61" result="shape"/>
+                            </filter>
+                            </defs>
+                        </svg>                                                      
+                    </div>
+                    <div class="cloud cloud8">
+                        <svg width="168" height="129" viewBox="0 0 168 129" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g filter="url(#filter0_d_3_61)">
+                            <path d="M83.9068 40C62.4192 40 45 57.4609 45 79H122.814C122.814 57.4609 105.394 40 83.9068 40Z" fill="white"/>
+                            </g>
+                            <defs>
+                            <filter id="filter0_d_3_61" x="0" y="0" width="167.814" height="129" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                            <feOffset dy="5"/>
+                            <feGaussianBlur stdDeviation="22.5"/>
+                            <feColorMatrix type="matrix" values="0 0 0 0 0.593724 0 0 0 0 0.684469 0 0 0 0 0.888646 0 0 0 0.1 0"/>
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_3_61"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_3_61" result="shape"/>
+                            </filter>
+                            </defs>
+                        </svg>                                                      
+                    </div>
+                    <div class="cloud cloud9">
+                        <svg width="168" height="129" viewBox="0 0 168 129" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g filter="url(#filter0_d_3_61)">
+                            <path d="M83.9068 40C62.4192 40 45 57.4609 45 79H122.814C122.814 57.4609 105.394 40 83.9068 40Z" fill="white"/>
+                            </g>
+                            <defs>
+                            <filter id="filter0_d_3_61" x="0" y="0" width="167.814" height="129" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                            <feOffset dy="5"/>
+                            <feGaussianBlur stdDeviation="22.5"/>
+                            <feColorMatrix type="matrix" values="0 0 0 0 0.593724 0 0 0 0 0.684469 0 0 0 0 0.888646 0 0 0 0.1 0"/>
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_3_61"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_3_61" result="shape"/>
+                            </filter>
+                            </defs>
+                        </svg>                                                      
+                    </div>
+                </div>
                 <div class="section-preview-text">
-                    <p>PLAN YOUR LIFE pls(delete)</p>
+                    <p>PLAN YOUR LIFE</p>
                     <p class="general-text">Increase your <span class="bold-last-word">productivity</span></p>
                     <p>Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</p>
+                    <button class="play-btn">
+                        <img src="images/Polygon.svg">
+                    </button>
+                </div>
+                <div class="curve-container">
+                    <svg class="responsive-svg" viewBox="0 0 1440 347" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
+                        <path id="curve"  d="M480.333 271.758C347.472 269.633 202.703 304.51 0 304.51V347H1441V0C1223.24 0 1305.86 129.682 960.667 129.682C643.639 129.682 789.74 276.705 480.333 271.758Z" fill="url(#paint0_linear_6_1)" fill-opacity="0.4"/>
+                        <defs>
+                            <linearGradient id="paint0_linear_6_1" x1="278.466" y1="347.443" x2="278.466" y2="-107.995" gradientUnits="userSpaceOnUse">
+                                <stop stop-color="#4B71FF" stop-opacity="0"/>
+                                <stop offset="1" stop-color="#6B89F8"/>
+                            </linearGradient>
+                        </defs>
+                        <!-- Интерактивные точки -->
+                        <circle class="interactive-point" cx="100" cy="100" r="10"  data-message="Сообщение 1"/>
+                        <circle class="interactive-point" cx="200" cy="200" r="10"  data-message="Сообщение 2"/>
+                    </svg>
                 </div>
             </div>
         </section>
@@ -59,5 +240,39 @@
         <section></section>
     </main>
     <footer></footer>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+    const curve = document.getElementById('curve');
+    if (!curve) {
+        console.error('Элемент с id="curve" не найден');
+        return;
+    }
+
+    const points = document.querySelectorAll('.interactive-point');
+
+    // Функция для получения координат точки на кривой
+    function getPointOnCurve(path, t) {
+        const point = path.getPointAtLength(t * path.getTotalLength());
+        return { x: point.x, y: point.y };
+    }
+
+    // Рассчитываем координаты точек на кривой
+    points.forEach((point, index) => {
+        const t = index / (points.length - 1); // Равномерно распределяем точки по кривой
+        const { x, y } = getPointOnCurve(curve, t);
+        point.setAttribute('cx', x);
+        point.setAttribute('cy', y);
+    });
+
+    // Обработка событий наведения на точки
+    // points.forEach(point => {
+    //     point.addEventListener('mouseenter', (e) => {
+    //         const message = e.target.getAttribute('data-message');
+    //         alert(message);
+    //     });
+    // });
+});
+    </script>
 </body>
 </html>
