--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section>
             <div сlass="section-preview">
                 <div class="section-preview-text">
-                    <p>PLAN YOUR LIFE pls(delete)</p>
+                    <p>PLAN YOUR LIFE</p>
                     <p class="general-text">Increase your <span class="bold-last-word">productivity</span></p>
                     <p>Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</p>
                 </div>
