--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <p class="general-text">Increase your <span class="bold-last-word">productivity</span></p>
                     <p>Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</p>
                     <button class="play-btn">
-                        <img src="images/Polygon.svg">
+                        <img src="images/Polygon.svg" alt="poly">
                     </button>
                 </div>
                 <div class="curve-container">
@@ -107,16 +107,16 @@
         <section class="section-m">
             <div class="section-manage">
                 <div class="text">
-                    <p></p>
-                    <h2></h2>
-                    <p></p>
-                    <div>
-                        <button></button>
-                        <button></button>
+                    <p>DESKTOP AND MOBILE APP</p>
+                    <h2><span class="bold-last-word">Plan</span> and <span class="bold-last-word">manage</span></h2>
+                    <p>Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata. Solum patrioque no sea. Mea ex malis mollis oporteat. Eum an expetenda consequat.</p>
+                    <div class="container-buttons">
+                        <button class="view">View video</button>
+                        <button class="see">See features</button>
                     </div>
                 </div>
-                <div>
-                    <!-- <img src="images/illustration.png"> -->
+                <div class="image-tech">
+                     <img class="image-tech-elem" src="images/illustration.png" alt="ill">
                 </div>
             </div>
         </section>
