--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="image-tech">
-                     <img class="image-tech-elem" src="images/illustration.png" alt="ill">
+                     <img class="image-tech-elem" src="images/ill.png" alt="ill">
                 </div>
             </div>
         </section>
