add new section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/header-style.css">
     <link rel="stylesheet" href="css/main-section-style.css">
     <link rel="stylesheet" href="css/partners-section.css">
+    <link rel="stylesheet" href="css/section-about-us.css">
     <link rel="stylesheet" href="css/section-manage.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -120,7 +121,41 @@
                 </div>
             </div>
         </section>
-        <section></section>
+        <section class="about-us">
+            <div class="about-us-container">
+                <div class="container-for-text">
+                    <p>ABOUT US</p>
+                    <h2>Read about our app</h2>
+                </div>
+                <div class="container-for-icons">
+                    <div>
+                        <div><img alt="home-icon" src="images/icons/home.svg"></img></div>
+                        <h3>Overview</h3>
+                        <p>Brute laoreet efficiendi id his, ea illum nonumes luptatum pro.</p>
+                    </div>
+                    <div>
+                        <div><img alt="files-icon" src="images/icons/files.svg"></div>
+                        <h3>Files</h3>
+                        <p>No vim nulla vitae intellegat. Ei enim error ius, solet atomorum conceptam ex has.</p>
+                    </div>
+                    <div>
+                        <div><img alt="chats-icon" src="images/icons/chats.svg"></div>
+                        <h3>Meeting chats</h3>
+                        <p>Vim ne tacimates neglegentur. Erat diceret omittam at est.</p>
+                    </div>
+                    <div>
+                        <div><img alt="upload-icon" src="images/icons/upload.svg"></div>
+                        <h3>Save events</h3>
+                        <p>Nisl idque mel ea, nominati voluptatum.</p>
+                    </div>
+                </div>
+                <div class="container-for-buttons">
+                    <button>Read more</button>
+                    <p>&#8212; &nbsp OR &nbsp &#8212;</p>
+                    <button>Get started</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </div>
