--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/partners-section.css">
     <link rel="stylesheet" href="css/section-about-us.css">
     <link rel="stylesheet" href="css/section-manage.css">
+    <link rel="stylesheet" href="css/section-usage.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
@@ -19,10 +20,8 @@
 <div class="wrapper">
     <header>
         <div class="container">
-            <div class="logo"></div>
             <nav  class="nav-desktop">
-
-
+                <div class="logo"></div>
                 <a target="_blank">Home</a>
                 <a>Blog</a>
                 <a>Features</a>
@@ -180,7 +179,46 @@
                     <button>Get started</button>
                 </div>
             </div>
+            <div class="inverse-clouds">
+                <div class="inverse-cloud inverse-cloud1">
+                    <img src="images/inverse-cloud.svg" alt="cloud">
+                </div>
+                <div class="inverse-cloud inverse-cloud2">
+                    <img src="images/inverse-cloud.svg" alt="cloud">
+                </div>
+                <div class="inverse-cloud inverse-cloud3">
+                    <img src="images/inverse-cloud.svg" alt="cloud">
+                </div>
+                <div class="inverse-cloud inverse-cloud4">
+                    <img src="images/inverse-cloud.svg" alt="cloud">
+                </div>
+                <div class="inverse-cloud inverse-cloud5">
+                    <img src="images/inverse-cloud.svg" alt="cloud">
+                </div>
+                <div class="inverse-cloud inverse-cloud6">
+                    <img src="images/inverse-cloud.svg" alt="cloud">
+                </div>
+            </div>
         </section>
+        <section class="usage">
+            <div class="usage-container">
+                    <div class="side-left">
+                        <div class="icon"></div>
+                        <h2>89%</h2>
+                        <p>Customers who have increased their productivity</p>
+                    </div>
+                    <div class="side-right">
+                        <div class="icon"></div>
+                        <h2>3123</h2>
+                        <p>Users who have used our application</p>
+                    </div>
+            </div>
+        </section>
+        <section class="how-to-start"></section>
+        <section class="quotes"></section>
+        <section class="questions"></section>
+        <section class="get-started"></section>
+        <section class="form"></section>
     </main>
     <footer></footer>
 </div>
